@@ -3,14 +3,12 @@ package org.whomustnotbenamed.dumplingsworld.controller;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.SessionAttributes;
+import org.springframework.web.bind.annotation.*;
 import org.whomustnotbenamed.dumplingsworld.model.Dumpling;
 import org.whomustnotbenamed.dumplingsworld.model.DumplingOrder;
 import org.whomustnotbenamed.dumplingsworld.model.Ingredient;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,12 +19,14 @@ import java.util.stream.Collectors;
 public class DesignDumplingController {
     @ModelAttribute
     public void addIngredientsToModel(Model model) {
-        List<Ingredient> ingredients = List.of(
-                new Ingredient("DWP", "Dumplings with pork", Ingredient.Type.MINCED_PORK),
-                new Ingredient("DWB", "Dumplings with beef", Ingredient.Type.MINCED_VEAL),
-                new Ingredient("DWPB", "Dumplings with pork and beef", Ingredient.Type.MINCED_MIX),
-                new Ingredient("BR", "Butter", Ingredient.Type.BUTTER),
-                new Ingredient("SC", "Sour cream", Ingredient.Type.SOUR_CREAM)
+        List<Ingredient> ingredients = Arrays.asList(
+                new Ingredient("DWP", "Dumplings with pork", Ingredient.Type.MINCED),
+                new Ingredient("DWB", "Dumplings with beef", Ingredient.Type.MINCED),
+                new Ingredient("DWPB", "Dumplings with pork and beef", Ingredient.Type.MINCED),
+                new Ingredient("PR", "Pepper", Ingredient.Type.SPICE),
+                new Ingredient("GO", "Green onions", Ingredient.Type.SPICE),
+                new Ingredient("BR", "Butter", Ingredient.Type.ADDITION),
+                new Ingredient("SC", "Sour cream", Ingredient.Type.ADDITION)
         );
 
         Ingredient.Type[] types = Ingredient.Type.values();
@@ -49,6 +49,13 @@ public class DesignDumplingController {
     @GetMapping
     public String showDesignForm() {
         return "design";
+    }
+
+    @PostMapping
+    public String processDumpling(Dumpling dumpling, @ModelAttribute DumplingOrder dumplingOrder) {
+        log.info("Processing dumpling: " + dumpling);
+        dumplingOrder.addDumpling(dumpling);
+        return "redirect:/orders/current";
     }
 
     private Iterable<Ingredient> filterByType(List<Ingredient> ingredients, Ingredient.Type type) {
